- add client adm routes
